<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_history">

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.covidapp.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.covidapp.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_quarantine"
        android:name="com.example.covidapp.ui.quarantine.QuarantineFragment"
        android:label="@string/title_quarantine"
        tools:layout="@layout/fragment_quarantine" />
</navigation>