<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.quarantine.QuarantineFragment">

    <View
        android:id="@+id/divider_500"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/dividerI500"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/coronavirusImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@drawable/ic_baseline_coronavirus_24"
        app:layout_constraintBottom_toTopOf="@+id/quarantineInfoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/untilTheEndOfQuarantineText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:letterSpacing="0.15"
        android:text="@string/daysCounter"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/divider_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tipOfTheDayConstText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:letterSpacing="0.15"
        android:text="@string/tipOfThDay"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/untilTheEndOfQuarantineText" />

    <TextView
        android:id="@+id/tipOfTheDay"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:text="2115"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tipOfTheDayConstText" />

    <TextView
        android:id="@+id/quarantineInfoText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:gravity="center"
        android:text="@string/addQuarantineText"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/divider_500" />

    <Button
        android:id="@+id/addQuarantineBtn"
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="18dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="19dp"
        android:layout_marginBottom="100dp"
        android:text="@string/addQuarantineButtonText"
        app:cornerRadius="16dp"
        app:layout_constraintBottom_toTopOf="@id/divider_500"
        app:layout_constraintEnd_toEndOf="@id/divider_500"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerI500" />

</androidx.constraintlayout.widget.ConstraintLayout>